--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # Adding config.py file.
 config.py
+config.py
+cpnfig.py
 # Adding additional files.
 API_practice.ipynb
 random_numbers.ipynb
 Google_Nearby_Search.ipynb
+data
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
